# Task-Management-System

./: .env.example  Cargo.toml  READ.ME  README.md
migrations/: 20251213082202_create_user_and_task_table.sql
src/: main.rs  state.rs
src/handlers/: auth.rs  tasks.rs
src/middleware/: auth.rs
src/models/: task.rs  user.rs
src/utils/: error.rs  jwt.rs
