[package]
name = "task_magagement_system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = ["macros"]}
tokio = { version = "1.48.0", features = ["full"]}
sqlx ={ version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"]}
thiserror = "2.0.17"
validator = {version = "0.20.0", features = ["derive"]}
serde_json = "1"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
http = "1"
axum-extra = { version = "0.12", features = ["typed-header"] }
tracing-subscriber = "0.3"
tracing = "0.1"